--- a/src/app/Components/leftbar/leftbar.component.html
+++ b/src/app/Components/leftbar/leftbar.component.html
@@ -161,13 +161,13 @@
         <li class="nav-item">
           <a
             class="nav-link menu-link"
-            href="#sidebarApps"
+            routerLink="/home/cagnottes"
             data-bs-toggle="collapse"
             role="button"
             aria-expanded="false"
             aria-controls="sidebarApps"
           >
-            <i class="ri-apps-2-line"></i> <span data-key="t-apps">Apps</span>
+            <i class="ri-apps-2-line"></i> <span data-key="t-apps">Cagnottes</span>
           </a>
           <div class="collapse menu-dropdown" id="sidebarApps">
             <ul class="nav nav-sm flex-column">
