--- a/src/app/Pages/acceuil/acceuil.component.html
+++ b/src/app/Pages/acceuil/acceuil.component.html
@@ -1,9 +1,12 @@
 
+<button routerLink="/home/createpost"  style="margin-left: 10px" > Que voulez vous dire ?</button>
 <ul *ngFor="let u of PostList">
 
   <li> {{u.date}}</li>
   <li> {{u.post}}</li>
   <li> {{u.state}}</li>
   <li> {{u.time}}</li>
+  <button routerLink="/home/updatepost/{{u.idPublication}}" class = "btn btn-primary"> Update</button>
+  <button (click) = "deletePost(u.idPublication)" class = "btn btn-close" style="margin-left: 10px"> </button>
 </ul>
 
