--- a/src/app/Components/leftbar/leftbar.component.html
+++ b/src/app/Components/leftbar/leftbar.component.html
@@ -141,444 +141,62 @@
             </ul>
           </div>
         </li>
-        <!-- end Dashboard Menu -->
         <li class="nav-item">
           <a
             class="nav-link menu-link"
-            href="#sidebarApps"
+            routerLink="/home/user"
             data-bs-toggle="collapse"
             role="button"
             aria-expanded="false"
-            aria-controls="sidebarApps"
+            aria-controls="sidebarDashboards"
           >
-            <i class="ri-apps-2-line"></i> <span data-key="t-apps">Apps</span>
+            <i class="ri-dashboard-2-line"></i>
+            <span data-key="t-dashboards">User </span>
           </a>
-          <div class="collapse menu-dropdown" id="sidebarApps">
+          <div class="collapse menu-dropdown" id="sidebarDashboardss">
             <ul class="nav nav-sm flex-column">
               <li class="nav-item">
                 <a
-                  href="apps-calendar.html"
+                  href="dashboard-analytics.html"
                   class="nav-link"
-                  data-key="t-calendar"
+                  data-key="t-analytics"
                 >
-                  Calendar
+                  Analytics
                 </a>
               </li>
               <li class="nav-item">
-                <a href="apps-chat.html" class="nav-link" data-key="t-chat">
-                  Chat
-                </a>
-              </li>
-              <li class="nav-item">
-                <a
-                  href="apps-mailbox.html"
-                  class="nav-link"
-                  data-key="t-mailbox"
-                >
-                  Mailbox
-                </a>
-              </li>
-              <li class="nav-item">
-                <a
-                  href="#sidebarEcommerce"
-                  class="nav-link"
-                  data-bs-toggle="collapse"
-                  role="button"
-                  aria-expanded="false"
-                  aria-controls="sidebarEcommerce"
-                  data-key="t-ecommerce"
-                >
-                  Ecommerce
-                </a>
-                <div class="collapse menu-dropdown" id="sidebarEcommerce">
-                  <ul class="nav nav-sm flex-column">
-                    <li class="nav-item">
-                      <a
-                        href="apps-ecommerce-products.html"
-                        class="nav-link"
-                        data-key="t-products"
-                      >
-                        Products
-                      </a>
-                    </li>
-                    <li class="nav-item">
-                      <a
-                        href="apps-ecommerce-product-details.html"
-                        class="nav-link"
-                        data-key="t-product-Details"
-                      >
-                        Product Details
-                      </a>
-                    </li>
-                    <li class="nav-item">
-                      <a
-                        href="apps-ecommerce-add-product.html"
-                        class="nav-link"
-                        data-key="t-create-product"
-                      >
-                        Create Product
-                      </a>
-                    </li>
-                    <li class="nav-item">
-                      <a
-                        href="apps-ecommerce-orders.html"
-                        class="nav-link"
-                        data-key="t-orders"
-                      >
-                        Orders
-                      </a>
-                    </li>
-                    <li class="nav-item">
-                      <a
-                        href="apps-ecommerce-order-details.html"
-                        class="nav-link"
-                        data-key="t-order-details"
-                      >
-                        Order Details
-                      </a>
-                    </li>
-                    <li class="nav-item">
-                      <a
-                        href="apps-ecommerce-customers.html"
-                        class="nav-link"
-                        data-key="t-customers"
-                      >
-                        Customers
-                      </a>
-                    </li>
-                    <li class="nav-item">
-                      <a
-                        href="apps-ecommerce-cart.html"
-                        class="nav-link"
-                        data-key="t-shopping-cart"
-                      >
-                        Shopping Cart
-                      </a>
-                    </li>
-                    <li class="nav-item">
-                      <a
-                        href="apps-ecommerce-checkout.html"
-                        class="nav-link"
-                        data-key="t-checkout"
-                      >
-                        Checkout
-                      </a>
-                    </li>
-                    <li class="nav-item">
-                      <a
-                        href="apps-ecommerce-sellers.html"
-                        class="nav-link"
-                        data-key="t-sellers"
-                      >
-                        Sellers
-                      </a>
-                    </li>
-                    <li class="nav-item">
-                      <a
-                        href="apps-ecommerce-seller-details.html"
-                        class="nav-link"
-                        data-key="t-sellers-details"
-                      >
-                        Seller Details
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-              </li>
-              <li class="nav-item">
-                <a
-                  href="#sidebarProjects"
-                  class="nav-link"
-                  data-bs-toggle="collapse"
-                  role="button"
-                  aria-expanded="false"
-                  aria-controls="sidebarProjects"
-                  data-key="t-projects"
-                >
-                  Projects
-                </a>
-                <div class="collapse menu-dropdown" id="sidebarProjects">
-                  <ul class="nav nav-sm flex-column">
-                    <li class="nav-item">
-                      <a
-                        href="apps-projects-list.html"
-                        class="nav-link"
-                        data-key="t-list"
-                      >
-                        List
-                      </a>
-                    </li>
-                    <li class="nav-item">
-                      <a
-                        href="apps-projects-overview.html"
-                        class="nav-link"
-                        data-key="t-overview"
-                      >
-                        Overview
-                      </a>
-                    </li>
-                    <li class="nav-item">
-                      <a
-                        href="apps-projects-create.html"
-                        class="nav-link"
-                        data-key="t-create-project"
-                      >
-                        Create Project
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-              </li>
-              <li class="nav-item">
-                <a
-                  href="#sidebarTasks"
-                  class="nav-link"
-                  data-bs-toggle="collapse"
-                  role="button"
-                  aria-expanded="false"
-                  aria-controls="sidebarTasks"
-                  data-key="t-tasks"
-                >
-                  Tasks
-                </a>
-                <div class="collapse menu-dropdown" id="sidebarTasks">
-                  <ul class="nav nav-sm flex-column">
-                    <li class="nav-item">
-                      <a
-                        href="apps-tasks-kanban.html"
-                        class="nav-link"
-                        data-key="t-kanbanboard"
-                      >
-                        Kanban Board
-                      </a>
-                    </li>
-                    <li class="nav-item">
-                      <a
-                        href="apps-tasks-list-view.html"
-                        class="nav-link"
-                        data-key="t-list-view"
-                      >
-                        List View
-                      </a>
-                    </li>
-                    <li class="nav-item">
-                      <a
-                        href="apps-tasks-details.html"
-                        class="nav-link"
-                        data-key="t-task-details"
-                      >
-                        Task Details
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-              </li>
-              <li class="nav-item">
-                <a
-                  href="#sidebarCRM"
-                  class="nav-link"
-                  data-bs-toggle="collapse"
-                  role="button"
-                  aria-expanded="false"
-                  aria-controls="sidebarCRM"
-                  data-key="t-crm"
-                >
+                <a href="dashboard-crm.html" class="nav-link" data-key="t-crm">
                   CRM
                 </a>
-                <div class="collapse menu-dropdown" id="sidebarCRM">
-                  <ul class="nav nav-sm flex-column">
-                    <li class="nav-item">
-                      <a
-                        href="apps-crm-contacts.html"
-                        class="nav-link"
-                        data-key="t-contacts"
-                      >
-                        Contacts
-                      </a>
-                    </li>
-                    <li class="nav-item">
-                      <a
-                        href="apps-crm-companies.html"
-                        class="nav-link"
-                        data-key="t-companies"
-                      >
-                        Companies
-                      </a>
-                    </li>
-                    <li class="nav-item">
-                      <a
-                        href="apps-crm-deals.html"
-                        class="nav-link"
-                        data-key="t-deals"
-                      >
-                        Deals
-                      </a>
-                    </li>
-                    <li class="nav-item">
-                      <a
-                        href="apps-crm-leads.html"
-                        class="nav-link"
-                        data-key="t-leads"
-                      >
-                        Leads
-                      </a>
-                    </li>
-                  </ul>
-                </div>
+              </li>
+              <li class="nav-item">
+                <a href="index.html" class="nav-link" data-key="t-ecommerce">
+                  Ecommerce
+                </a>
               </li>
               <li class="nav-item">
                 <a
-                  href="#sidebarCrypto"
+                  href="dashboard-crypto.html"
                   class="nav-link"
-                  data-bs-toggle="collapse"
-                  role="button"
-                  aria-expanded="false"
-                  aria-controls="sidebarCrypto"
                   data-key="t-crypto"
                 >
                   Crypto
                 </a>
-                <div class="collapse menu-dropdown" id="sidebarCrypto">
-                  <ul class="nav nav-sm flex-column">
-                    <li class="nav-item">
-                      <a
-                        href="apps-crypto-transactions.html"
-                        class="nav-link"
-                        data-key="t-transactions"
-                      >
-                        Transactions
-                      </a>
-                    </li>
-                    <li class="nav-item">
-                      <a
-                        href="apps-crypto-buy-sell.html"
-                        class="nav-link"
-                        data-key="t-buy-sell"
-                      >
-                        Buy & Sell
-                      </a>
-                    </li>
-                    <li class="nav-item">
-                      <a
-                        href="apps-crypto-orders.html"
-                        class="nav-link"
-                        data-key="t-orders"
-                      >
-                        Orders
-                      </a>
-                    </li>
-                    <li class="nav-item">
-                      <a
-                        href="apps-crypto-wallet.html"
-                        class="nav-link"
-                        data-key="t-my-wallet"
-                      >
-                        My Wallet
-                      </a>
-                    </li>
-                    <li class="nav-item">
-                      <a
-                        href="apps-crypto-ico.html"
-                        class="nav-link"
-                        data-key="t-ico-list"
-                      >
-                        ICO List
-                      </a>
-                    </li>
-                    <li class="nav-item">
-                      <a
-                        href="apps-crypto-kyc.html"
-                        class="nav-link"
-                        data-key="t-kyc-application"
-                      >
-                        KYC Application
-                      </a>
-                    </li>
-                  </ul>
-                </div>
               </li>
               <li class="nav-item">
                 <a
-                  href="#sidebarInvoices"
+                  href="dashboard-projects.html"
                   class="nav-link"
-                  data-bs-toggle="collapse"
-                  role="button"
-                  aria-expanded="false"
-                  aria-controls="sidebarInvoices"
-                  data-key="t-invoices"
+                  data-key="t-projects"
                 >
-                  Invoices
+                  Projects
                 </a>
-                <div class="collapse menu-dropdown" id="sidebarInvoices">
-                  <ul class="nav nav-sm flex-column">
-                    <li class="nav-item">
-                      <a
-                        href="apps-invoices-list.html"
-                        class="nav-link"
-                        data-key="t-list-view"
-                      >
-                        List View
-                      </a>
-                    </li>
-                    <li class="nav-item">
-                      <a
-                        href="apps-invoices-details.html"
-                        class="nav-link"
-                        data-key="t-details"
-                      >
-                        Details
-                      </a>
-                    </li>
-                    <li class="nav-item">
-                      <a
-                        href="apps-invoices-create.html"
-                        class="nav-link"
-                        data-key="t-create-invoice"
-                      >
-                        Create Invoice
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-              </li>
-              <li class="nav-item">
-                <a
-                  href="#sidebarTickets"
-                  class="nav-link"
-                  data-bs-toggle="collapse"
-                  role="button"
-                  aria-expanded="false"
-                  aria-controls="sidebarTickets"
-                  data-key="t-supprt-tickets"
-                >
-                  Support Tickets
-                </a>
-                <div class="collapse menu-dropdown" id="sidebarTickets">
-                  <ul class="nav nav-sm flex-column">
-                    <li class="nav-item">
-                      <a
-                        href="apps-tickets-list.html"
-                        class="nav-link"
-                        data-key="t-list-view"
-                      >
-                        List View
-                      </a>
-                    </li>
-                    <li class="nav-item">
-                      <a
-                        href="apps-tickets-details.html"
-                        class="nav-link"
-                        data-key="t-ticket-details"
-                      >
-                        Ticket Details
-                      </a>
-                    </li>
-                  </ul>
-                </div>
               </li>
             </ul>
           </div>
         </li>
+
+        <!-- end Dashboard Menu -->
 
         <li class="nav-item">
           <a
