--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -1219,13 +1219,10 @@
               />
               <span class="text-start ms-xl-2">
                 <span
-                  class="d-none d-xl-inline-block ms-1 fw-medium user-name-text"
-                  >Anna Adame</span
+                  class="d-none d-xl-inline-block ms-1 fw-medium user-name-text"  routerLink="/home/profile"
+                  >MY PROFILE</span
                 >
-                <span
-                  class="d-none d-xl-block ms-1 fs-12 text-muted user-name-sub-text"
-                  >Founder</span
-                >
+
               </span>
             </span>
           </button>
