--- a/src/app/Pages/profile/profile.component.html
+++ b/src/app/Pages/profile/profile.component.html
@@ -6,11 +6,10 @@
   </header>
   <p>
     <strong>Token:</strong>
-
   </p>
   <p>
     <strong>Email:</strong>
-    {{ currentUser.email }}
+    {{ currentUser.iduser }}
   </p>
 
   <strong>Roles:</strong>
