hamza commit working

--- a/src/app/Components/leftbar/leftbar.component.html
+++ b/src/app/Components/leftbar/leftbar.component.html
@@ -4,19 +4,19 @@
     <!-- Dark Logo-->
     <a href="index.html" class="logo logo-dark">
       <span class="logo-sm">
-        <img src="assets/images/logo-sm.png" alt="" height="22" />
+        <img src="assets/images/logo.png" alt="" height="120" />
       </span>
       <span class="logo-lg">
-        <img src="assets/images/logo-dark.png" alt="" height="17" />
+        <img src="assets/images/logo.png" alt="" height="120" />
       </span>
     </a>
     <!-- Light Logo-->
     <a href="index.html" class="logo logo-light">
       <span class="logo-sm">
-        <img src="assets/images/logo-sm.png" alt="" height="22" />
+        <img src="assets/images/logo.png" alt="" height="100" />
       </span>
       <span class="logo-lg">
-        <img src="assets/images/logo-light.png" alt="" height="17" />
+        <img src="assets/images/logo.png" alt="" height="100" />
       </span>
     </a>
     <button
@@ -167,7 +167,25 @@
             aria-expanded="false"
             aria-controls="sidebarDashboards"
           >
-            <i class="ri-dashboard-2-line"></i>
+            <i class="ri-user-2-fill"></i>
             <span data-key="t-dashboards">User </span>
           </a>
-        </li></ul></div></div></div>
+        </li>
+
+
+        <li class="nav-item">
+          <a
+            class="nav-link menu-link"
+            routerLink="/home/logout"
+            data-bs-toggle="collapse"
+            role="button"
+            aria-expanded="false"
+            aria-controls="sidebarDashboards"
+          >
+            <i class="ri-logout-box-line"></i>
+            <span data-key="t-dashboards">Logout </span>
+          </a>
+        </li>
+
+
+      </ul></div></div></div>
