--- a/src/app/Pages/cagnottes/cagnottes.component.html
+++ b/src/app/Pages/cagnottes/cagnottes.component.html
@@ -25,5 +25,6 @@
     </tr>
     </tbody>
   </table>
-  
-  
+  <button (click) = "CreatCustomer()" class = "btn btn-info" style="margin-left: 10px"> CreatCustomer</button>
+  <button (click) = "CreateCardStripe()" class = "btn btn-info" style="margin-left: 10px"> CreateCardStripe</button>
+  <button (click) = "Pay()" class = "btn btn-info" style="margin-left: 10px"> Paiement</button>
