--- a/src/app/Pages/events/events.component.html
+++ b/src/app/Pages/events/events.component.html
@@ -22,16 +22,26 @@
       <td>{{event.description}}</td>
       <td>{{event.title}}</td>
       <td>
-  
         <button (click) = "updateEvent(event.id)" class = "btn btn-primary"> Update</button>
-        <button (click) = "deleteEvent(event.id)" class = "btn btn-danger" style="margin-left: 10px"> Delete</button>
-        <button (click) = "EventDetails(event.id)" class = "btn btn-primary" style="margin-left: 10px"> View</button>
-  
       </td>
-  
+      <td>
+        <button (click) = "deleteEvent(event.id)" class = "btn btn-danger" style="margin-left: 10px"> Delete</button>
+      </td>
+      <td>
+        <button (click) = "EventDetails(event.id)" class = "btn btn-secondary" style="margin-left: 10px"> View</button>
+      </td>
+      <td>
+        <button (click) = "Affectation(event.id)" class="btn btn-warning" style="margin-left: 20px">Affectation</button>
+      </td>
+      <td>
+        <button (click) = "SendMail(event.id)" class="btn btn-info" style="margin-left: 20px">SendMail</button>
+      </td>
+<td></td>
   
     </tr>
     </tbody>
   </table>
+  <button (click) = "SavePdf" class = "btn btn-primary" style="margin-left: 10px"> PDF</button>
+
   
   
