--- a/src/app/Components/leftbar/leftbar.component.html
+++ b/src/app/Components/leftbar/leftbar.component.html
@@ -46,7 +46,16 @@
             <span data-key="t-dashboards">Events </span>
           </a>
 
-
+          <a
+            class="nav-link menu-link"
+            routerLink="/home/cagnottes"
+            data-bs-toggle="collapse"
+            role="button"
+            aria-expanded="false"
+            aria-controls="sidebarApps"
+          >
+            <i class="ri-apps-2-line"></i> <span data-key="t-apps">Cagnottes</span>
+          </a>
 
           <a
             class="nav-link menu-link"
