--- a/src/app/Pages/paiement/paiement.component.html
+++ b/src/app/Pages/paiement/paiement.component.html
@@ -42,9 +42,22 @@
                        name="userAmount">
               </div>
 
+              <div class="container-fluid py-3">
+                <form #form="ngForm">
+                  <div class="row mt-3">
+                    <div class="col-sm-12 mb-2">
+                      <re-captcha id="recaptcha" name="recaptcha" #recaptcha="ngModel" [(ngModel)]="token" required [class.is-invalid]="recaptcha.invalid && (recaptcha.dirty || recaptcha.touched)"></re-captcha>
+                      <div *ngIf="recaptcha.invalid && (recaptcha.dirty || recaptcha.touched)" class="invalid-feedback">
+                        <div *ngIf="recaptcha.errors?.['required']">This field is required.</div>
+                      </div>
+                    </div>
+                  </div>
+                </form>
+                </div>
+                
   
-            <br />
-            <button class="btn btn-success" type="submit">Submit</button>
+             
+            <button class="btn btn-success" type="submit"  (click)="send(form)" >Submit</button>
   
           </form>
         </div>
