--- a/src/app/Pages/login/login.component.html
+++ b/src/app/Pages/login/login.component.html
@@ -1,7 +1,7 @@
   <div sty class="card card-container">
 
     <div  class="imgcontainer">
-      <p>WELCOME TO </p><br/><h3 style="color: #946e2d">WOMEN EMPOWERMENT</h3><br/>
+      <p>WELCOME TO </p><h3 style="color: #946e2d">WOMEN EMPOWERMENT</h3><br/>
 
       <svg width=100 height=100 version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
            viewBox="0 0 145 145" style="enable-background:new 0 0 145 145;" xml:space="preserve">
@@ -89,7 +89,6 @@
 
 
     </div>
-    <br/>
 
     <br/>
 
@@ -119,4 +118,8 @@
     </button>
   </div>
 </form>
+<br/>
+      <a  routerLink="/register" class="nav-link" class="btn btn-secondary" role="button" >Register</a>
+       <a  routerLink="/" class="nav-link" style="color: #946e2d" role="button" >Forget password ? </a>
+
   </div>
