--- a/src/app/Pages/acceuil/createpost/createpost.component.html
+++ b/src/app/Pages/acceuil/createpost/createpost.component.html
@@ -15,8 +15,8 @@
 
           <br />
           <button class="btn btn-success" type="submit">Submit</button>
-          <button routerLink="/home/acceuil" class="btn btn-danger"></button>
-          <input type="file" class="file-upload" onchange="upload(event.target.files)">
+          <button routerLink="/home/acceuil" class="btn btn-danger"> Cancel </button>
+          <input  type="file" class="file-upload" onchange="upload($event.target.file)">
 
 
         </form>
