--- a/src/app/Pages/acceuil/updatepost/updatepost.component.html
+++ b/src/app/Pages/acceuil/updatepost/updatepost.component.html
@@ -15,7 +15,7 @@
 
           <br />
           <button class="btn btn-success" type="submit">Submit</button>
-          <button routerLink="/home/acceuil" class="btn btn-danger"></button>
+          <button routerLink="/home/acceuil" class="btn btn-danger">Cancel</button>
 
         </form>
       </div>
