--- a/src/app/Pages/offer-list/add-offer/add-offer.component.html
+++ b/src/app/Pages/offer-list/add-offer/add-offer.component.html
@@ -43,7 +43,7 @@
           </div>
           <br />
           <button class="btn btn-success" type="submit">Submit</button>
-
+          <button routerLink="/home/Offer" class = "btn btn-primary" style="margin-left: 333px">Back</button>
         </form>
       </div>
     </div>
