--- a/src/app/Pages/offer-list/offer-details/offer-details.component.html
+++ b/src/app/Pages/offer-list/offer-details/offer-details.component.html
@@ -1,4 +1,8 @@
-<h3> View Employee Details</h3>
+<div>
+<td><h3> View Offer Details</h3></td>
+  <td><button routerLink="/home/Offer" class = "btn btn-primary" style="margin-left: 30px">Back</button></td>
+</div>
+
 <div>
   <div>
     <label> <b> Name: </b></label> {{offer.name}}
@@ -11,11 +15,48 @@
   </div>
   <div>
     <label> <b> Location: </b></label> {{offer.location}}
-  </div>
+
   <div>
     <label> <b> Salary: </b></label> {{offer.salary}}
   </div>
   <div>
     <label> <b> Due on: </b></label> {{offer.date_Interview}}
-  </div>
+<div  class = "row" >
+   <tr>
+    <th><h2> Candidacies List To Offer Number : {{id}}</h2></th>
+   </tr>
+</div>
+<table class = "table table-striped table-bordered">
+  <thead >
+  <tr>
+
+    <th>id</th>
+    <th>Name</th>
+    <th>State</th>
+    <th>Dated On</th>
+    <th>CV</th>
+    <th>Offer_</th>
+    <th>User_</th>
+
+  </tr>
+  </thead>
+  <tbody>
+  <tr *ngFor = "let can of c ">
+    <td>{{can.id}}</td>
+    <td>{{can.candidName}}</td>
+    <td>{{can.state}}</td>
+    <td>{{can.date_Of_Candid}}</td>
+    <td>{{can.cv}}</td>
+    <td>{{can.offer.id}}</td>
+    <td>{{can.user.iduser}}</td>
+
+    <td>
+      <button (click) = "updateCand(can.id)" class = "btn btn-danger" style="margin-left: 10px"> Modify </button>
+      <button (click) = "deleteCandid(can.id)" class = "btn btn-primary" style="margin-left: 10px"> Delete </button>
+    </td>
+  </tr>
+
+  </tbody>
+
+</table>
 </div>
