--- a/src/app/Pages/offer-list/offer-list.component.html
+++ b/src/app/Pages/offer-list/offer-list.component.html
@@ -1,40 +1,54 @@
 <div class = "row">
-    <h2> Opportunities List</h2>
-    <button routerLink="/home/addoffer" class = "btn btn-primary" style="margin-left: 10px">Add Opportunity</button>
+  <button routerLink="/home/candidacy" class = "btn btn-soft-success" style="margin-bottom: 20px">Go to Candidacy</button>
+  <tr>
+    <th><h2> Opportunities List :</h2></th>
+    <th> <button routerLink="/home/addoffer" class = "btn btn-soft-success" style="margin-bottom: 8px">+</button></th>
+
+  </tr>
+</div>
+<table class = "table table-striped table-bordered">
+  <thead>
+  <tr>
+    <th style="width:5%">id</th>
+    <th style="width:5%">Name</th>
+    <th style="width:5%">Type</th>
+    <th style="width:5%">Status</th>
+    <th style="width:5%">Location</th>
+    <th style="width:5%">Salary</th>
+    <th style="width:5%">Due on</th>
+    <th style="width:5%">Action</th>
+    <th style="width:50%">Manage</th>
+
+  </tr>
+  </thead>
+  <tbody>
+  <tr *ngFor = "let Offer of offers | paginate: { itemsPerPage: tableSize, currentPage: page,totalItems: count };let i = index">
+    <td>{{Offer.id}}</td>
+    <td>{{Offer.name}}</td>
+    <td>{{Offer.type}}</td>
+    <td>{{Offer.status}}</td>
+    <td>{{Offer.location}}</td>
+    <td>{{Offer.salary}}</td>
+    <td>{{Offer.date_Interview}}</td>
+    <td>
+      <button (click) = "PostOffer()" class = "btn btn-primary">Aplly</button>
+    </td>
+    <td>
+      <button (click) = "updateOffer(Offer.id)" class = "btn btn-primary">Edit</button>
+      <button (click) = "deleteOffer(Offer.id)" class = "btn btn-danger">Remove</button>
+      <button (click) = "offerDetails(Offer.id)" class = "btn btn-primary">show</button>
+    </td>
+
+  </tr>
+  </tbody>
+</table>
+<div  style="margin-left: 650px">
+  <div class="d-flex justify-content-center">
+<pagination-controls
+    previousLabel="Prev"
+    nextLabel="Next"
+    (pageChange)="onTableDataChange($event)" >
+</pagination-controls>
   </div>
-  <table class = "table table-striped table-bordered">
-    <thead>
-    <tr>
-      <th>id</th>
-      <th>Name</th>
-      <th>Type</th>
-      <th>Status</th>
-      <th>Location</th>
-      <th>Salary</th>
-      <th>Due on</th>
-      <th>Manage</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr *ngFor = "let Offer of offers">
-      <td>{{Offer.id}}</td>
-      <td>{{Offer.name}}</td>
-      <td>{{Offer.type}}</td>
-      <td>{{Offer.status}}</td>
-      <td>{{Offer.location}}</td>
-      <td>{{Offer.salary}}</td>
-      <td>{{Offer.date_Interview}}</td>
-      <td>
-  
-        <button (click) = "updateOffer(Offer.id)" class = "btn btn-primary"> Update</button>
-        <button (click) = "deleteOffer(Offer.id)" class = "btn btn-danger" style="margin-left: 10px"> Delete</button>
-        <button (click) = "offerDetails(Offer.id)" class = "btn btn-primary" style="margin-left: 10px"> View</button>
-  
-      </td>
-  
-  
-    </tr>
-    </tbody>
-  </table>
-  
-  
+</div>
+
