--- a/src/app/Components/leftbar/leftbar.component.html
+++ b/src/app/Components/leftbar/leftbar.component.html
@@ -45,6 +45,51 @@
             <i class="ri-dashboard-2-line"></i>
             <span data-key="t-dashboards">Events </span>
           </a>
+          <a
+            class="nav-link menu-link"
+            routerLink="/home/Availibility/add-disp"
+            data-bs-toggle="collapse"
+            role="button"
+            aria-expanded="false"
+            aria-controls="sidebarDashboards"
+          >
+            <i class="ri-dashboard-2-line"></i>
+            <span data-key="t-dashboards">Appointments </span>
+          </a>
+          <a
+            class="nav-link menu-link"
+            routerLink="/home/Availibility/retrieve-all-disps"
+            data-bs-toggle="collapse"
+            role="button"
+            aria-expanded="false"
+            aria-controls="sidebarDashboards"
+          >
+            <i class="ri-dashboard-2-line"></i>
+            <span data-key="t-dashboards">Availabilities </span>
+          </a>
+          <a
+            class="nav-link menu-link"
+            routerLink="/home/Report/retrieve-all-reps"
+            data-bs-toggle="collapse"
+            role="button"
+            aria-expanded="false"
+            aria-controls="sidebarDashboards"
+          >
+            <i class="ri-dashboard-2-line"></i>
+            <span data-key="t-dashboards">Reports</span>
+          </a>
+
+          <a
+            class="nav-link menu-link"
+            routerLink="/home/Report/myreports"
+            data-bs-toggle="collapse"
+            role="button"
+            aria-expanded="false"
+            aria-controls="sidebarDashboards"
+          >
+            <i class="ri-dashboard-2-line"></i>
+            <span data-key="t-dashboards">My Reports</span>
+          </a>
 
 
           <a
