--- a/src/app/Pages/login/login.component.html
+++ b/src/app/Pages/login/login.component.html
@@ -1,4 +1,4 @@
-  <div sty class="card card-container">
+  <div  class="card card-container">
 
     <div  class="imgcontainer">
       <p>WELCOME TO </p><h3 style="color: #946e2d">WOMEN EMPOWERMENT</h3><br/>
@@ -120,6 +120,6 @@
 </form>
 <br/>
       <a  routerLink="/register" class="nav-link" class="btn btn-secondary" role="button" >Register</a>
-       <a  routerLink="/" class="nav-link" style="color: #946e2d" role="button" >Forget password ? </a>
+       <a  routerLink="/forgetpass" class="nav-link" style="color: #946e2d" role="button" >Forget password ? </a>
 
   </div>
