--- a/src/app/Pages/register/register.component.html
+++ b/src/app/Pages/register/register.component.html
@@ -114,6 +114,7 @@
           <br />
 
           <button  class="btn btn-success" type="submit">Sign up</button>
+          <a  routerLink="/login" class="nav-link" class="btn btn-secondary" style="margin-left: 60%" role="button" > < < GO BACK </a>
 
         </form>
       </div>
