--- a/src/app/Pages/Reports/treatrepbyblocking/treatrepbyblocking.component.html
+++ b/src/app/Pages/Reports/treatrepbyblocking/treatrepbyblocking.component.html
@@ -5,15 +5,15 @@
         <hr />
         <div class="card-body">
           <form (ngSubmit)="treatReportbyblocking()">
-  
+
             <div class="form-group">
-              <label>Name</label>
+              <label>ID OF USER </label>
               <input type="text" class="form-control" id="iduser" [(ngModel)]="id_user"
                      name="name">
             </div>
             <br />
             <button class="btn btn-success" type="submit">Submit</button>
-  
+
           </form>
         </div>
       </div>
